--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,161 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* @layer base {
+	:root {
+		--color--rimbobage: #f8f5ee;
+		--color--black: #131313;
+		--color--light-grey: #cfcfcf;
+		--color--text-on-black: #a4a4a4;
+		--color--brand: #ff7373;
+		--color--white: white;
+		--color--grey: #818181;
+		--color--silver: #b6b6b6;
+		--color--1e: #1e1e1e;
+		--color--dark-gray: #333;
+		--color--darkbluegreenish: #172b32;
+		--color--brand_hover: #ff5454;
+		--color--purplelight: #c5b9fa;
+		--color--rl-black: black;
+		--color--yellow: #ffdb60;
+	}
+
+	.dark {
+		--color--black: #000000;
+		--color--cyan-bluish-gray: #abb8c3;
+		--color--white: #ffffff;
+		--color--vivid-purple: #9b51e0;
+
+		--gradient--blush-light-purple: linear-gradient(
+			135deg,
+			rgb(255, 206, 236) 0%,
+			rgb(152, 150, 240) 100%
+		);
+	}
+} */
+
+@layer base {
+	:root {
+		--background: 42, 42%, 95%;
+		--foreground: 0, 0%, 7%;
+		--selection: 0, 100%, 73%;
+		--card: 0 0% 100%;
+		--card-foreground: 0 0% 3.9%;
+		--popover: 0 0% 100%;
+		--popover-foreground: 0 0% 3.9%;
+		--primary: 0 0% 9%;
+		--primary-foreground: 0 0% 98%;
+		--secondary: 0 0% 96.1%;
+		--secondary-foreground: 0 0% 9%;
+		--muted: 0 0% 96.1%;
+		--muted-foreground: 0 0% 45.1%;
+		--accent: 0 0% 96.1%;
+		--accent-foreground: 0 0% 9%;
+		--destructive: 0 84.2% 60.2%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 0 0% 89.8%;
+		--input: 0 0% 89.8%;
+		--ring: 0 0% 3.9%;
+		--chart-1: 12 76% 61%;
+		--chart-2: 173 58% 39%;
+		--chart-3: 197 37% 24%;
+		--chart-4: 43 74% 66%;
+		--chart-5: 27 87% 67%;
+		--radius: 0.5rem;
+	}
+
+	.dark {
+		--background: 0, 0%, 7%;
+		--foreground: 0 0% 98%;
+		--selection: 271, 70%, 60%;
+		--card: 0 0% 3.9%;
+		--card-foreground: 0 0% 98%;
+		--popover: 0 0% 3.9%;
+		--popover-foreground: 0 0% 98%;
+		--primary: 0 0% 98%;
+		--primary-foreground: 0 0% 9%;
+		--secondary: 0 0% 14.9%;
+		--secondary-foreground: 0 0% 98%;
+		--muted: 0 0% 14.9%;
+		--muted-foreground: 0 0% 63.9%;
+		--accent: 0 0% 14.9%;
+		--accent-foreground: 0 0% 98%;
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 0 0% 14.9%;
+		--input: 0 0% 14.9%;
+		--ring: 0 0% 83.1%;
+		--chart-1: 220 70% 50%;
+		--chart-2: 160 60% 45%;
+		--chart-3: 30 80% 55%;
+		--chart-4: 280 65% 60%;
+		--chart-5: 340 75% 55%;
+	}
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@layer base {
+	* {
+		@apply border-border outline-ring/50;
+	}
+	*::selection {
+		@apply bg-selection text-white;
+	}
+	body {
+		@apply bg-background text-foreground;
+	}
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.player-modal {
+	overflow: hidden;
+}
+
+@keyframes playing {
+	0% {
+		opacity: 100;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+.playing {
+	opacity: 100;
+	animation: playing 1s ease forwards 0.3s;
+}
+
+@keyframes starting {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 100;
+	}
+}
+
+.starting {
+	opacity: 0;
+	animation: starting 1s ease forwards 0.3s;
+}
+
+.bar {
+	background-color: hsl(var(--selection)) !important;
+}
+
+.cl-rootBox,
+.cl-cardBox,
+.cl-signIn-start {
+	width: 100% !important;
+  max-width: 100% !important;
+  height: 100% !important;
+}
+
+.cl-footer {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	clip: rect(1px, 1px, 1px, 1px);
+	overflow: hidden;
 }
